<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Reminders</string>
    
	<string name="details">Details</string>
	<string name="done">Done</string>
	<string name="remind_on_a_specified_date">Remind me on a day</string>
	<string name="reminder_time">Alarm</string>
    <string name="reminder_pro">Reminders</string>
	<string name="repeat">Repeat</string>
    <string name="location">Location</string>
	<string name="remind_on_a_specified_location">Remind me at a location</string>
	<string name="priority">Priority</string>
	<string name="list">List</string>
	<string name="remarks">Notes</string>
    <string name="customer">Customer</string>

    <string name="table1">Scheduled</string>
    <string name="table1_no_project">No items due today</string>
    <string name="table1_project">1 item due today</string>
    <string name="table2">Reminder</string>
    <string name="table3">List 2</string>
    <string name="table4">List 3</string>

    <string name="cancel">Cancel</string>
    <string name="colors">Color</string>
    <string name="search">Search</string>
    
    <string name="repeat_never">Never</string>
    <string name="repeat_day">Every Day</string>
    <string name="repeat_week">Every Week</string>
    <string name="repeat_two_week">Every 2 Week</string>
    <string name="repeat_month">Every Month</string>
    <string name="repeat_year">Every Year</string>
    <string name="purple">Purple</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="yellow">Yellow</string>
    <string name="gray">Gray</string>
    <string name="red">Red</string>
    <string name="orange">Orange</string>

    <string name="edit">Edit</string>
    <string name="list_title">List title</string>
    <string name="show_completed">Show Completed</string>
    <string name="hide_completed">Hide Completed</string>

    <string name="more">More</string>
    <string name="delete">Delete</string>
    <string name="delete_list">Delete List</string>
    <string name="zero">0</string>

</resources>