<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="585dp"
    android:background="@drawable/shape_corner"
    android:orientation="vertical" >
	
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical" >

                <EditText
                    android:id="@+id/list_title_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="10dp"
                    android:background="@null"
                    android:text="@string/list_title"
                    android:visibility="gone"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/list_title_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="10dp"
                    android:background="@null"
                    android:textSize="25sp" />

                <ImageView
                    android:id="@+id/alarm_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="20dp"
                    android:visibility="gone"
                    android:background="@drawable/getup" />

                <TextView
                    android:id="@+id/list_count_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="16dp"
                    android:text="@string/zero"
                    android:textSize="25sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_marginBottom="5dp"
                android:gravity="center_vertical" >

                <TextView
                    android:id="@+id/title_description_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="10dp"
                    android:text="@string/table1_no_project"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/edit_or_done"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="16dp"
                    android:background="@null"
                    android:padding="3dp"
                    android:text="@string/edit"
                    android:visibility="invisible"
                    android:textColor="#007afe"
                    android:textSize="15sp" />
            </RelativeLayout>

            <View
                android:id="@+id/color_choose_line"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="10dp"
                android:background="#cccccc"
                android:visibility="gone" />

            <TextView
                android:id="@+id/color_choose_tv"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:paddingBottom="3dp"
                android:paddingLeft="10dp"
                android:paddingTop="3dp"
                android:text="@string/colors"
                android:textSize="16sp"
                android:visibility="gone" />
			
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#cccccc" />
			
            <com.iphone.reminder.listview.ListViewCompat
                android:id="@+id/details_list"
                android:layout_width="match_parent"
                android:layout_height="450dp"
                android:transcriptMode="normal" 
                />
          	
        </LinearLayout>
    </LinearLayout>
	<Button 
	    android:id="@+id/delete_list_tv"
	    android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@null"
        android:text="@string/show_completed"
        android:textSize="16sp"
        android:textColor="#007afe"
        android:gravity="center"
        android:layout_alignParentBottom="true"
	    />
</RelativeLayout>