<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:background="#ffffffff"
        android:layout_height="35dp" >

        <ImageView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginLeft="5dp"
            android:src="@drawable/iphone_button_arraw_bg_unpress"/>

        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="25dp"
            android:background="@null"
            android:text="@string/details"
            android:textColor="#007afe"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/repeat"
            android:textSize="15sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#999999" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="30dp"
        android:background="#999999" />

    <ListView
        android:id="@+id/repeat_listview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffffff">
    </ListView>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#999999" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="30dp"
        android:background="#999999" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:background="#ffffffff"
        android:layout_height="40dip" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="25dp"
            android:text="@string/customer"
            android:textSize="15sp" />
    </RelativeLayout>

</LinearLayout>