<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res/com.iphone.reminder"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#00ffffff"
        >
		
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@color/white" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/details"
                android:textColor="#000000"
                android:textSize="15sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/done_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@null"
                android:paddingRight="20dp"
                android:text="@string/done"
                android:textColor="#AA007afe"
                android:textSize="15sp"
                android:textStyle="bold"/>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#999999" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="vertical" >
				
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginTop="30dip"
                    android:background="#999999" />

                <EditText
                    android:id="@+id/reminder_title_et"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@color/white"
                    android:paddingLeft="15dp"
                    android:textColor="#000000" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="#999999" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginTop="30dp"
                    android:background="#999999" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@color/white"
                    android:gravity="center_vertical" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:paddingLeft="15dp"
                        android:text="@string/remind_on_a_specified_date"
                        android:textColor="#000000"
                        android:textSize="15sp" />

                    <com.iphone.reminder.view.SwitchButton
                        android:id="@+id/remind_on_data_sb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:textSize="15sp" />
                </RelativeLayout>
				<LinearLayout 
				    android:id="@+id/remind_on_data_ll"
				    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginLeft="15dp"
                    android:background="#999999" />

                <RelativeLayout
                    android:id="@+id/reminder_time_rl"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@color/white"
                    android:gravity="center_vertical" >

                    <TextView
                        android:id="@+id/reminder_time_prompt_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:paddingLeft="15dp"
                        android:text="@string/reminder_time"
                        android:textColor="#000000"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/reminder_time_content_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="10dp"
                        android:textColor="#000000"
                        android:textSize="15sp" />
                    
                    <TextView
                        android:id="@+id/reminder_time_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:paddingLeft="10dp"
                        android:textColor="#007afe"
                        android:textSize="15sp"
                        android:visibility="gone"
                         />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginLeft="15dp"
                    android:background="#999999" />

                <LinearLayout
                    android:id="@+id/ly_dialog_picker"
                    android:layout_width="match_parent"
                    android:layout_height="210dip"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:background="@color/white"
                    android:visibility="gone">
                </LinearLayout>

                <View
                    android:id="@+id/ly_dialog_picker_line"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginLeft="15dp"
                    android:background="#999999"
                    android:visibility="gone"
                     />

                <RelativeLayout
                    android:id="@+id/repeat_rl"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@color/white"
                    android:gravity="center_vertical" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:paddingLeft="15dp"
                        android:text="@string/repeat"
                        android:textColor="#000000"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/repeat_details"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="15dp"
                        android:text="@string/repeat_never"
                        android:textColor="#999999"
                        android:textSize="15sp" />
                </RelativeLayout>
			</LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="#999999" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginTop="30dp"
                    android:background="#999999" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@color/white"
                    android:gravity="center_vertical" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:paddingLeft="15dp"
                        android:text="@string/remind_on_a_specified_location"
                        android:textColor="#000000"
                        android:textSize="15sp" />

                    <com.iphone.reminder.view.SwitchButton
                        android:id="@+id/remind_on_location_sb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:textSize="15sp" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="#999999" />

                <RelativeLayout
                    android:id="@+id/remind_location_rl"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@color/white"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:paddingLeft="15dp"
                        android:text="@string/location"
                        android:textColor="#000000"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/location_remind_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="15dp"
                        android:text="@string/location"
                        android:textColor="#999999"
                        android:textSize="15sp" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="#999999" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginTop="30dp"
                    android:background="#999999" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@color/white"
                    android:gravity="center_vertical" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:paddingLeft="15dp"
                        android:text="@string/priority"
                        android:textColor="#000000"
                        android:textSize="15sp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/priority"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="15dp"/>
                    <!-- todo -->
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginLeft="10dp"
                    android:background="#999999" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@color/white"
                    android:gravity="center_vertical" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:paddingLeft="15dp"
                        android:text="@string/list"
                        android:textColor="#000000"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/list_name_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="15dp"
                        android:text="@string/list_title"
                        android:textColor="#999999"
                        android:textSize="15sp" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginLeft="15dp"
                    android:background="#999999" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@color/white"
                    android:gravity="center_vertical"
                    android:paddingLeft="15dp"
                    android:text="@string/remarks"
                    android:textColor="#000000"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/reminder_note"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@color/white"
                    android:paddingLeft="15dp"
                    android:textColor="#999999"
                    android:textSize="18sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="#999999" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</RelativeLayout>